CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(MZX)

ADD_DEFINITIONS("-std=c++11")

SET(CMAKE_VERBOSE_MAKEFILE on)
SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_CXX_FLAGS "-Wall")
SET(CMAKE_CXX_FLAGS_DEBUG "-g3")
SET(CMAKE_CXX_FLAGS_RELEASE "-O2")
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/out_lib)

AUX_SOURCE_DIRECTORY(src/util SRC_UTIL)
AUX_SOURCE_DIRECTORY(src/thread SRC_THREAD)
AUX_SOURCE_DIRECTORY(src/net SRC_NET)
AUX_SOURCE_DIRECTORY(src/event SRC_EVENT)

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/include
)

LINK_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/lib
)

LINK_LIBRARIES(
    pthread
)

SET(SRC_LIST
    ${SRC_UTIL}
    ${SRC_THREAD}
    ${SRC_NET}
    ${SRC_EVENT}
)

ADD_LIBRARY(mzx SHARED ${SRC_LIST})
ADD_LIBRARY(mzx_static STATIC ${SRC_LIST})

SET_TARGET_PROPERTIES(mzx PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(mzx_static PROPERTIES OUTPUT_NAME "mzx")
SET_TARGET_PROPERTIES(mzx_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
