CMAKE_MINIMUM_REQUIRED(VERSION 3.5.1)

PROJECT(MZX)

SET(CMAKE_VERBOSE_MAKEFILE on)
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_CXX_FLAGS "-Wall")
SET(CMAKE_CXX_FLAGS_DEBUG "-g")
SET(CMAKE_CXX_FLAGS_RELEASE "-O2")
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/out_lib)

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/include
)

LINK_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/lib
)

LINK_LIBRARIES(
    pthread
)

FILE(GLOB_RECURSE SRC_LIST
    "${PROJECT_SOURCE_DIR}/src/*.cpp"
    "${PROJECT_SOURCE_DIR}/src/*.cxx"
    "${PROJECT_SOURCE_DIR}/src/*.cc"
)

ADD_LIBRARY(mzx SHARED ${SRC_LIST})
ADD_LIBRARY(mzx_static STATIC ${SRC_LIST})

SET_TARGET_PROPERTIES(mzx PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(mzx_static PROPERTIES OUTPUT_NAME "mzx")
SET_TARGET_PROPERTIES(mzx_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
